feat: group invitations
